<resources>
    <string name="app_name">MySimpleCalculator</string>
    <string name="stdNum">0</string>
    <string name="switcher">Switch</string>
    <string name="btnCancel">C</string>
    <string name="buttonSeven">7</string>
    <string name="buttonEight">8</string>
    <string name="buttonNine">9</string>
    <string name="buttonFour">4</string>
    <string name="buttonFive">5</string>
    <string name="buttonSix">6</string>
    <string name="buttonOne">1</string>
    <string name="buttonTwo">2</string>
    <string name="buttonThree">3</string>
    <string name="buttonZero">0</string>
    <string name="buttonPlusMinus">+/-</string>
    <string name="buttonDot">,</string>
    <string name="buttonPlus">+</string>
    <string name="buttonMinus">-</string>
    <string name="buttonMultiplie">x</string>
    <string name="buttonDivision">/</string>
    <string name="buttonEquals">=</string>
    <string name="buttonPercent">%</string>
    <string name="buttonRoot">/^</string>
    <string name="buttonDegree">^</string>
    <string name="btnMSave">M Save</string>
    <string name="btnMLoad">M Load</string>
    <string name="btnBackSpace">Bck</string>
    <string name="btnLogarifm">Log</string>
    <string name="btnFrct">x/y</string>
</resources>
