<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/screen"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="32sp"
            android:gravity="right"
            android:layout_margin="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/memoryScreen"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="24dp"
                android:textSize="16sp"
                android:gravity="left"
                android:background="@android:color/holo_blue_dark"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:id="@+id/resultScreen"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="24dp"
                android:textSize="16sp"
                android:gravity="right"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:paddingTop="16dp">

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/switcher" />

                <SeekBar
                    android:id="@+id/seekBar"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="10"
                    android:progress="3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TableLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4">

                    <TableRow
                        android:layout_weight="1">
                        <Button
                            android:id="@+id/btnC"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/btnCancel"/>
                        <Button
                            android:id="@+id/btnMSave"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/btnMSave"/>
                        <Button
                            android:id="@+id/btnMLoad"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/btnMLoad"/>
                    </TableRow>
                    <TableRow
                        android:layout_weight="1">
                        <Button
                            android:id="@+id/btnSvn"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/buttonSeven"/>
                        <Button
                            android:id="@+id/btnEght"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/buttonEight"/>
                        <Button
                            android:id="@+id/btnNine"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/buttonNine"/>
                    </TableRow>
                    <TableRow
                        android:layout_weight="1">
                        <Button
                            android:id="@+id/btnFour"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/buttonFour"/>
                        <Button
                            android:id="@+id/btnFive"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/buttonFive"/>
                        <Button
                            android:id="@+id/btnSix"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/buttonSix"/>
                    </TableRow>
                    <TableRow
                        android:layout_weight="1">
                        <Button
                            android:id="@+id/btnOne"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/buttonOne"/>
                        <Button
                            android:id="@+id/btnTwo"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/buttonTwo"/>
                        <Button
                            android:id="@+id/btnThree"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/buttonThree"/>
                    </TableRow>
                    <TableRow
                        android:layout_weight="1">
                        <Button
                            android:id="@+id/btnPlusMinus"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/buttonPlusMinus"/>
                        <Button
                            android:id="@+id/btnZero"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/buttonZero"/>
                        <Button
                            android:id="@+id/btnDot"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/buttonDot"/>
                    </TableRow>
                </TableLayout>

                <TableLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <TableRow
                        android:layout_weight="1">
                        <Button
                            android:id="@+id/btnBckSpc"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="Back"/>
                        <Button
                            android:id="@+id/btnPrcnt"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/buttonPercent"/>
                    </TableRow>
                    <TableRow
                        android:layout_weight="1">
                        <Button
                            android:id="@+id/btnDgr"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/buttonDegree"/>
                        <Button
                            android:id="@+id/btnRoot"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/buttonRoot"/>
                    </TableRow>
                    <TableRow
                        android:layout_weight="1">
                        <Button
                            android:id="@+id/btnPls"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/buttonPlus"/>
                        <Button
                            android:id="@+id/btnMlt"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/buttonMultiplie"/>
                    </TableRow>
                    <TableRow
                        android:layout_weight="1">
                        <Button
                            android:id="@+id/btnMns"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/buttonMinus"/>
                        <Button
                            android:id="@+id/btnDvsn"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/buttonDivision"/>
                    </TableRow>
                    <TableRow
                        android:layout_weight="1">
                        <Button
                            android:id="@+id/btnEqls"
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/buttonEquals"/>
                    </TableRow>>

                </TableLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>